--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Portfolio!</h1>
+    <h1>Welcome to My Portfolios!</h1>
     <p>This is a simple portfolio website hosted on GitHub Pages.</p>
 </body>
 </html>
