--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="css/style.css">
     <script>
         fetch('sidebar.html')
@@ -18,8 +18,10 @@
 <div class="container">
     <div id="sidebar"></div>
     <div class="content">
-        <h1>Final Frontier</h1>
+        <h1>About Us</h1>
+        <img src="img/test.gif" width="400" height="400" style="margin-left: auto; margin-right: auto; display: block;">
     </div>
 </div>
 <script defer src="js/script.js"></script>
 </body>
+</html>
