--- a/archive.html
+++ b/archive.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <title>Archive</title>
     <link rel="stylesheet" href="css/style.css">
     <script>
         fetch('sidebar.html')
@@ -18,8 +18,10 @@
 <div class="container">
     <div id="sidebar"></div>
     <div class="content">
-        <h1>Final Frontier</h1>
+        <h1>Archive</h1>
+        <p>archive.html</p>
     </div>
 </div>
 <script defer src="js/script.js"></script>
 </body>
+</html>
