--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>오른쪽 본문, 왼쪽 사이드바 (메뉴 포함)</title>
+    <title>test</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -55,5 +55,9 @@
             <li onclick="location.href='openCall.html'">Open Call</li>
         </ul>
     </div>
+    <div class="content">
+        <h1>Final Frontier</h1>
+    </div>
 </div>
+<script defer src="js/script.js"></script>
 </body>
