--- a/archive.html
+++ b/archive.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archive</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/grid.css">
     <script>
         fetch('sidebar.html')
             .then(response => response.text())
@@ -19,7 +20,125 @@
     <div id="sidebar"></div>
     <div class="content">
         <h1>Archive</h1>
-        <p>archive.html</p>
+        <div class="grid">
+            <div class="grid-item">
+                <a href="coexistance.html">
+                    <img src="img/camera.jpg" alt="Image 1">
+                    <div class="description">COEXISTANCE</div>
+                    <div class="keyword">김진선,jinsunkim,sculpture,art</div> <!--이건 tag 아이콘? 같은거로 바꾸면 좋겠네-->
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="touch-wood.html">
+                    <img src="img/camera.jpg" alt="Image 2">
+                    <div class="description">touch wood</div>
+                    <div class="keyword">koyuki,photography,japan,art</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="frozen-are-the-winds-of-time.html">
+                    <img src="img/camera.jpg" alt="Image 3">
+                    <div class="description"> Frozen Are The Winds of Time</div>
+                    <div class="keyword">photography,china,wangru</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="ł₵(₱ⱨ)ø₦ł₵-đ₳ɽ₭ɽøø₥.html">
+                    <img src="img/camera.jpg" alt="Image 4">
+                    <div class="description">ł₵(₱Ⱨ)Ø₦ł₵ Đ₳Ɽ₭ⱤØØ₥</div>
+                    <div class="keyword">photography,rainjacobson,usa</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="weight-loss-plan.html">
+                    <img src="img/camera.jpg" alt="Image 5">
+                    <div class="description">WEIGHT LOSS PLAN</div>
+                    <div class="keyword">cai yirong,photography,china</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="time-upon-a-time.html">
+                    <img src="img/camera.jpg" alt="Image 6">
+                    <div class="description">TIME UPON A TIME</div>
+                    <div class="keyword">photography,japan,photobook,daido brothers</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="dummy-book-dummie.html">
+                    <img src="img/camera.jpg" alt="Image 7">
+                    <div class="description">Dummy Book Dummie</div>
+                    <div class="keyword">dummybook,artbook,photobook</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="oz.html">
+                    <img src="img/camera.jpg" alt="Image 8">
+                    <div class="description">OZ</div>
+                    <div class="keyword">photography,lightbox,sanginkim,김상인</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="airport-railroad.html">
+                    <img src="img/camera.jpg" alt="Image 9">
+                    <div class="description">Airport Railroad</div>
+                    <div class="keyword">chenyihuan,photography,china,divided</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="standing-here-wondering-where-to-go.html">
+                    <img src="img/camera.jpg" alt="Image 10">
+                    <div class="description">Standing Here Wondering Where To Go</div>
+                    <div class="keyword">tingtingma,photography,artbook,photobook</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="what-a-wonderful-world.html">
+                    <img src="img/camera.jpg" alt="Image 11">
+                    <div class="description">What a Wonderful World</div>
+                    <div class="keyword">ojisan,azossi,portrait,photography,hanuellee,이하늘</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="Bookmark-Document-Memory.html">
+                    <img src="img/camera.jpg" alt="Image 12">
+                    <div class="description">ReRe shirts</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="rere-shirts.html">
+                    <img src="img/camera.jpg" alt="Image 13">
+                    <div class="description">The Heroic Weather Conditions</div>
+                    <div class="keyword">eunjaejoe,installation,art,조은재</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="the-heroic-weather-conditions.html">
+                    <img src="img/camera.jpg" alt="Image 14">
+                    <div class="description">Peaceful Mountain</div>
+                    <div class="keyword">dushangheng,photography,documents,installation</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="peaceful-mountain.html">
+                    <<img src="img/camera.jpg" alt="Image 15">
+                    <div class="description">책갈피.문서.암기</div>
+                    <div class="keyword"> taehyenkang,photography,installation</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="a-very-flat-sculpture.html">
+                    <img src="img/camera.jpg" alt="Image 16">
+                    <div class="description">A Very Flat Sculpture</div>
+                    <div class="keyword">seungyullee,installation,이승열</div>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="launching.html">
+                    <img src="img/camera.jpg" alt="Image 17">
+                    <div class="description">Launching</div>
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 <script defer src="js/script.js"></script>
