--- a/sidebar.html
+++ b/sidebar.html
@@ -16,27 +16,61 @@
             <!--<img crossorigin="" src="https://freight.cargo.site/w/100/h/130/q/75/i/W1714325151073113539845249920807/ffcs6.png" width="709" height="924" class="media " decoding="sync" part="media"> -->
         </button>
         <ul>
-            <li onclick="toggleSubmenu('menu1')">Exhibitions</li>
+            <li id="exhibit-menu" onclick="toggleSubmenu('menu1', 'exhibit-menu')">Exhibitions</li>
             <ul id="menu1" class="submenu">
-                <li>coexistance</li>
-                <li>touch wood</li>
-                <li>Frozen Are The Winds of Time</li>
-                <li>WEIGHT LOSS PLAN</li>
-                <li>TIME UPON A TIME</li>
-                <li>ł₵(₱Ⱨ)Ø₦ł₵ Đ₳Ɽ₭ⱤØØ₥</li>
-                <li>OZ</li>
-                <li>Airport Railroad</li>
-                <li>Dummy Book Dummie</li>
-                <li>What a Wonderful World</li>
-                <li>ReRe shirts</li>
-                <li>Standing Here Wondering Where To Go</li>
-                <li>Bookmark.Document.Memory</li>
-                <li>Peaceful Mountain</li>
-                <li>The Heroic Weather Conditions</li>
-                <li>A Very Flat Sculpture</li>
-                <li>Launching</li>
+                <li>
+                    <a href="coexistance.html">coexistance</a>
+                </li>
+                <li>
+                    <a href="touch-wood.html">touch wood</a>
+                </li>
+                <li>
+                    <a href="frozen-are-the-winds-of-time.html">Frozen Are The Winds of Time</a>
+                </li>
+                <li>
+                    <a href="weight-loss-plan.html">WEIGHT LOSS PLAN</a>
+                </li>
+                <li>
+                    <a href="time-upon-a-time.html">TIME UPON A TIME</a>
+                </li>
+                <li>
+                    <a href="ł₵(₱ⱨ)ø₦ł₵-đ₳ɽ₭ɽøø₥.html">ł₵(₱Ⱨ)Ø₦ł₵ Đ₳Ɽ₭ⱤØØ₥</a>
+                </li>
+                <li>
+                    <a href="oz.html">OZ</a>
+                </li>
+                <li>
+                    <a href="airport-railroad.html">Airport Railroad</a>
+                </li>
+                <li>
+                    <a href="dummy-book-dummie.html">Dummy Book Dummie</a>
+                </li>
+                <li>
+                    <a href="what-a-wonderful-world.html">What a Wonderful World</a>
+                </li>
+                <li>
+                    <a href="rere-shirts.html">ReRe shirts</a>
+                </li>
+                <li>
+                    <a href="standing-here-wondering-where-to-go.html">Standing Here Wondering Where To Go</a>
+                </li>
+                <li>
+                    <a href="Bookmark-Document-Memory.html">Bookmark.Document.Memory</a>
+                </li>
+                <li>
+                    <a href="peaceful-mountain.html">Peaceful Mountain</a>
+                </li>
+                <li>
+                    <a href="the-heroic-weather-conditions.html">The Heroic Weather Conditions</a>
+                </li>
+                <li>
+                    <a href="a-very-flat-sculpture.html">A Very Flat Sculpture</a>
+                </li>
+                <li>
+                    <a href="launching.html">Launching</a>
+                </li>
             </ul>
-            <li onclick="toggleSubmenu('menu2')">Artists</li>
+            <li id="artists-menu" onclick="toggleSubmenu('menu2', 'artists-menu')">Artists</li>
             <ul id="menu2" class="submenu">
                 <li>Chen Yihuan</li>
                 <li>chunggeun lee</li>
