--- a/launching.html
+++ b/launching.html
@@ -19,6 +19,25 @@
     <div id="sidebar"></div>
     <div class="content">
         <h1>Launching</h1>
+        <h3>Final Frontier</h3>
+        <h3>2022. 10. 27 ~ 2022. 11. 13</h3>
+        <h3>@ffseoul</h3>
+        <h3>ffseoul.com</h3>
+        <h3>
+            파이널프론티어라는 이름으로 전시에 참여하는 8인의 작가는 원격 제어가 가능한 도트 프린터를 사용해 전달하고자 하는 메시지나 이미지를 인쇄한다. 인쇄된 결과물은 전시장에 그대로 쌓이게 되고 무한궤도와도 같은 형태로 아카이브되어 ⟪Launching⟫을 뜻하는 엔진 점화를 시각화하여 그들의 첫 출발을 알린다.<br>
+            <br>
+            매체나 속성, 어디에도 구애받지 않아 스스로를 '무중력'의 상태라고 지칭하는 파이널프론티어는 열린 실험의 공간으로 앞으로의 다양한 콘텐츠를 통해 본인들의 색깔을 정립해 나갈 예정이다.<br>
+        </h3>
+        <p>
+            디자인 : 조은재<br>
+            전시 기획 및 엔지니어링 : <br>
+            웹 : <br>
+            <br>
+            참여작가<br>
+            TingTing Ma, Chen Yihuan, Du Shangheng,
+            Haneul Lee, Heeyong Jeong, Taehyen Kang,
+            Sungyeol Lee, SangIn Kim, Eunjae Joe.
+        </p>
     </div>
 </div>
 <script defer src="js/script.js"></script>
