--- a/weight-loss-plan.html
+++ b/weight-loss-plan.html
@@ -46,7 +46,8 @@
             Period: 2014/10/15- 2015/1/22 99 Days in total<br>
             Shooting Method: Constantly shooting in 99 days without disjunction<br>
             Ways for losing weight: Highly intensive workouts<br>
-            Weight changed: 64kg – 53.8kg
+            Weight changed: 64kg – 53.8kg<br>
+            <br>
         </div>
     </div>
 </div>
